# heartbeat

./: .gitignore  README.md  audio_player.py  autonomous_session.py  client.py  docker-compose.yml  pyproject.toml  run.py  sox_stitch.py  stream_logic.py
app/: audio_stitch.py  generator.py  hr_simulator.py  main.py  musicgen_config.py  pipeline.py  routes.py  schemas.py  services.py  session_store.py  transition_engine.py  wav_paths.py
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py  audio_utils.py  config.py  decision_engine.py  generator.py  main.py  models.py  session_metrics.py  session_store.py
backend/app/routes/: __init__.py  generate.py  health.py  sessions.py
client/HeartBeat/: .gitignore
client/HeartBeat/HeartBeat/: AppLogger.swift  ContentView.swift  HeartBeatApp.swift  Info.plist
client/HeartBeat/HeartBeat.xcodeproj/: project.pbxproj
client/HeartBeat/HeartBeat/Assets.xcassets/AppIcon.appiconset/: Contents.json
client/HeartBeat/HeartBeat/Assets.xcassets/LaunchBackground.colorset/: Contents.json
client/HeartBeat/HeartBeat/Config/: AppConfig.swift
client/HeartBeat/HeartBeat/CustomComponents/: HomeComponents.swift  MainTabView.swift  ProfileComponents.swift
client/HeartBeat/HeartBeat/Models/: APIModels.swift  ProfileModels.swift  UserProfile.swift
client/HeartBeat/HeartBeat/Services/: APIClient.swift  AppState.swift  AudioPlayerManager.swift  HealthKitManager.swift
client/HeartBeat/HeartBeat/Views/: HomeView.swift  ProfileView.swift  SettingsView.swift
(+13 files in other folders)
