[tool.poetry]
name = "heartbeat"
version = "0.1.0"
description = "API for generating music based on preferences and personal data"
authors = ["uaneere <rus.agafonov29@gmail.com>"]

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.11.0"

torch = { version = "2.5.1", source = "pytorch-cuda" }
torchvision = { version = "0.20.1", source = "pytorch-cuda" }
torchaudio = { version = "2.5.1", source = "pytorch-cuda" }
xformers = { version = "0.0.29.post1", source = "pytorch-cuda" }

numpy = "1.26.4"
scipy = "1.15.3"

transformers = "4.49.0"
sentencepiece = "0.2.1"
protobuf = "3.20.3"
einops = "0.8.2"
julius = "0.2.7"
torchdiffeq = "0.2.5"
torchmetrics = "1.9.0"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
omegaconf = "2.3.0"
flashy = "0.0.2"
dora-search = "0.1.12"
submitit = "1.5.4"
treetable = "0.2.6"
demucs = "4.0.1"
encodec = "0.1.1"
openunmix = "1.3.0"
gradio = "6.14.0"
soundfile = "0.13.1"
librosa = "0.11.0"

av = "^17.0.0"
num2words = "^0.5.14"
spacy = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"